fixed dark mode colors so that everything is now visible.

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 [data-theme="light"] {
     --bg-color: #000000;
     --primary-color: #000000;
-    --secondary-color: #000;
+    --secondary-color: #FFC0CB;
     --text-color: #FFC0CB;
     --text-color-2: #FFC0CB;
     --text-color-3: rgb(204, 0, 0);
